--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1>
 <marquee scrollamount=10>
 <font color="blue">
-Sample web page is working correctly.
+Sample web page was changed to RED font.
   </font>
   </marquee>
   </h1>
